2004-03-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/sysconf.c: New file.

	* sysdeps/unix/sysv/linux/bits/local_lim.h: Define HOST_NAME_MAX.

	* posix/getconf.c (vars): Add _SC_ values for cache information.
	* sysdeps/generic/bits/confname.h: Add _SC_* values for cache
	information.
	* sysdeps/unix/sysv/linux/sysconf.c (__sysconf): Reorganize to
	allow yet another sysconf function to include the one in this file.
	* sysdeps/unix/sysv/linux/i386/sysconf.c: New file.
	* sysdeps/generic/sysconf.c: Add default handling for cache line info.

2004-03-11  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/sysconf.c (__sysconf): Add missing support for
	some _SC_* values.

2004-03-10  Chris Heath  <chris@heathens.co.nz>

	* iconvdata/gconv.map: Add gconv_end (fixes memory leak).

2004-03-11  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/powerpc32/__longjmp.S (JB_SIZE): Undefine before
	including __longjmp-common.S again.
	* sysdeps/powerpc/powerpc64/__longjmp.S (JB_SIZE): Likewise.
	* sysdeps/powerpc/powerpc32/setjmp.S (JB_SIZE): Undefine before
	including setjmp-common.S again.
	* sysdeps/powerpc/powerpc64/setjmp.S (JB_SIZE): Likewise.
	* sysdeps/powerpc/novmxsetjmp.h (__novmx__longjmp): Fix type of
	first argument in the prototype.
	* sysdeps/powerpc/longjmp.c (__vmx__longjmp, __vmx__libc_longjmp):
	Remove bogus semicolons.

	* sysdeps/s390/dl-tls.h: Only add __tls_get_offset assembly if
	IS_IN_rtld.
	(__TLS_GET_ADDR): Use __tls_get_offset, not __tls_get_addr.

2004-03-11  Ulrich Drepper  <drepper@redhat.com>

	* resolv/ns_ttl.c: Don't add ns_parse_ttl for libresolv.so.

2004-03-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/errno.c: Include <dl-sysdep.h>.  Use
	RTLD_PRIVATE_ERRNO to decide whether errno compat symbols are needed.

	* elf/dl-sym.c: Unify _dl_sym and _dl_vsym code and make the entry
	points wrappers around the unified code.

2004-03-11  Richard Henderson  <rth@redhat.com>
