@@ -1,3 +1,8 @@
+2004-03-12  Richard Henderson  <rth@redhat.com>
+
+	* sysdeps/unix/sysv/linux/alpha/select.S: Fix unwind.  Propagate
+	oldvalue from CENABLE to CDISABLE.
+
 2004-03-12  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/x86_64/sysconf.c: New file.
